Add community link to header

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -108,8 +108,21 @@ html[data-theme="dark"] .admonition h5 {
   border-color: var(--ifm-color-primary);
 }
 
-.header-github-link:hover {
+.header-icon-link {
+  padding: var(--ifm-navbar-item-padding-vertical) calc(var(--ifm-navbar-item-padding-horizontal) * 0.8);
+}
+
+.header-icon-link:hover {
   opacity: 0.6;
+}
+
+.header-download-link:before {
+  content: '';
+  width: 24px;
+  height: 24px;
+  display: flex;
+
+  background: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' height='24' viewBox='0 0 24 24' width='24'%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM17 13l-5 5-5-5h3V9h4v4h3z'/%3E%3C/svg%3E") no-repeat;
 }
 
 .header-github-link:before {
